fixed the alignment of proje3ct and work

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ flex-basis: 60%;
 
 /*-----------/*PROJECTS-------------*/
 #projects{
-    padding: 30px 0;
+    padding: 30px 110px;
 
 }
 .projects-list{
